# esp8266-rs-fun

./: .gitignore  Cargo.toml
.cargo/: config
control/: Cargo.toml
control/src/: main.rs
firmware/: Cargo.toml  build.rs  rust-toolchain.toml
firmware/src/: logger.rs  main.rs  music.rs  note.rs  old_music.rs  time.rs
src/: logger.rs  main.rs  time.rs
