[package]
name = "fun"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
xtensa-lx-rt = { version = "0.7.0", features = ["lx106"] }
xtensa-lx = { version = "0.4.0", features = ["lx106"] }
panic-halt = "0.2.0"
esp8266-hal = "0.5.0"

[profile.release]
opt-level = 'z'
lto = "fat"

[profile.dev.package.'*']
opt-level = 3
