[package]
name = "fun"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
xtensa-lx-rt = { version = "0.7", features = ["lx106"] }
xtensa-lx = { version = "0.4", features = ["lx106"] }
esp8266-hal = "0.5"
defmt = "0.2"

[features]
default = [
    "defmt-default",
    "defmt-debug",
    "defmt-trace",
    "defmt-info",
    "defmt-warn",
    "defmt-error",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[profile.release]
opt-level = 'z'
lto = "fat"

[profile.dev.package.'*']
opt-level = 3
