[package]
name = "firmware"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
xtensa-lx-rt = { version = "0.7", features = ["lx106"] }
xtensa-lx = { version = "0.4", features = ["lx106"] }
esp8266-hal = "0.5"
defmt = "0.2"
micromath = "2.0"
num-rational = { version = "0.4", default-features = false }
nb = "1.0"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1

[features]
default = ["defmt-trace"]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
